--- a/api/foods/models/Foods.settings.json
+++ b/api/foods/models/Foods.settings.json
@@ -23,6 +23,16 @@
       "default": "4",
       "min": 1,
       "max": 5
+    },
+    "pic": {
+      "model": "file",
+      "via": "related",
+      "plugin": "upload"
+    },
+    "pic_list": {
+      "collection": "file",
+      "via": "related",
+      "plugin": "upload"
     }
   }
 }
