--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
-    "start": "strapi start",
+    "start": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.19.0",
+    "qiniu": "^7.2.2",
+    "sqreen": "^1.38.1",
     "strapi": "3.0.0-beta.17.5",
     "strapi-admin": "3.0.0-beta.17.5",
-    "strapi-utils": "3.0.0-beta.17.5",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.17.5",
+    "strapi-hook-mongoose": "3.0.0-beta.17.5",
     "strapi-plugin-content-manager": "3.0.0-beta.17.5",
-    "strapi-plugin-users-permissions": "3.0.0-beta.17.5",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.17.5",
     "strapi-plugin-email": "3.0.0-beta.17.5",
     "strapi-plugin-upload": "3.0.0-beta.17.5",
-    "strapi-hook-mongoose": "3.0.0-beta.17.5"
+    "strapi-plugin-users-permissions": "3.0.0-beta.17.5",
+    "strapi-utils": "3.0.0-beta.17.5"
   },
   "author": {
     "name": "A Strapi developer"
